<resources>
    <string name="app_name">Tap&amp;Buy</string>

    <string name="login">LOGIN</string>
    <string name="register">Non hai un account? Registrati</string>
    <string name="registration">REGISTRATI</string>
    <string name="mail">Email</string>
    <string name="mail_error">Inserisci una email valida</string>
    <string name="pwd">Password</string>
    <string name="pwd_error">"Password di almeno 8 caratteri, una lettera maiuscola e un carattere speciale"</string>
    <string name="login_failed">Autenticazione fallita, riprova !</string>
    <string name="register_failed">Registrazione fallita, riprova !</string>
    <string name="logout">Logout</string>
    <string name="admin">admin</string>
    <string name="user">user</string>

    <string name="manage_research">Gestisci ricerche salvate</string>

    <string name="myObject">I miei oggetti</string>
    <string name="newObject">Nuovo annuncio</string>
    <string name="nameObj">Nome oggetto :</string>
    <string name="category">Categoria :</string>
    <string name="tvPrice">Prezzo :</string>
    <string name="statoObj">Stato dell\'oggetto :</string>
    <string name="description">Descrizione :</string>
    <string name="sendObj">Disponibilità a spedire : no   </string>
    <string name="sendObj_yes">Disponibilità a spedire : si   </string>
    <string name="phone">Telefono</string>
    <string name="createAdv">Crea annuncio</string>
    <string name="address">Indirizzo</string>
    <string name="modify">MODIFICA</string>
    <string name="delete">ELIMINA</string>

    <string name="new_object">Nuovo</string>
    <string name="used">Usato in perfette condizioni</string>
    <string name="few_defects">Qualche lieve difetto</string>
    <string name="faulty">Difettoso</string>
    <string name="modify_cat">Modifica categorie</string>
    <string name="insert_title">Inserisci titolo annuncio</string>
    <string name="insert_price">Inserisci prezzo</string>
    <string name="insert_description">Inserisci descrizione</string>
    <string name="insert_email">Inserisci email</string>
    <string name="insert_phone">Inserisci telefono</string>
    <string name="insert_location">Inserisci indirizzo</string>
    <string name="send">INVIA</string>
    <string name="contact">Contatta venditore</string>
    <string name="btn_delete">CANCELLA</string>
    <string name="btn_modify">MODIFICA</string>
    <string name="tvModifyObject">Modifica oggetto</string>
    <string name="search_for">Ricerca per :</string>
    <string name="distance_for">Distanza in km da me :</string>
    <string name="btn_research">Ricerca</string>
    <string name="received_message">Hai ricevuto un messaggio !</string>
    <string name="message_for">"Messaggio relativo all'oggetto : "</string>
    <string name="labelExp">Spedisce :</string>
    <string name="selled">Venduto</string>
    <string name="selledNo">Venduto : no</string>
    <string name="selledYes">Venduto : si</string>

    <string-array name="object_condition">
        <item>Nuovo</item>
        <item>Usato in perfette condizioni</item>
        <item>Qualche lieve difetto</item>
        <item>Difettoso</item>
    </string-array>

    <string name="userSays">%s dice : </string>
    <string name="closeChat">Chiudi chat</string>
    <string name="saveResearch">Salva ricerca</string>
    <string name="addCategory">Aggiungi categoria</string>
    <string name="modifyCat">Modifica</string>
    <string name="listCat">Modifica categorie :</string>
    <string name="newCat">Nuova categoria :</string>
    <string name="new_name_cat">Nuovo nome categoria</string>
    <string name="insert_image">Inserisci immagine</string>

    <string-array name="Price_choose">
        <item>Prezzo massimo:</item>
        <item>Prezzo minimo:</item>
        <item>Range di prezzo:</item>
    </string-array>

</resources>