<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".FragmentNewAdvert">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_object"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="84dp"
            android:backgroundTint="@color/dark_green"
            android:background="@drawable/image_placeholder"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/newObject"
            android:textColor="@color/orange"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNameObj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="108dp"
            android:text="@string/nameObj"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleScreen" />

        <EditText
            android:id="@+id/edNameObj"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:maxLength="50"
            android:padding="5dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/image_object"
            app:layout_constraintTop_toBottomOf="@+id/tvNameObj"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="14dp"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/image_object"
            app:layout_constraintTop_toBottomOf="@+id/edNameObj" />

        <Spinner
            android:id="@+id/spinnerCat"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@color/white"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/image_object"
            app:layout_constraintTop_toBottomOf="@+id/tvCategories"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btn_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            android:src="@drawable/photocamera"
            app:layout_constraintStart_toEndOf="@+id/btn_gallery"
            app:layout_constraintTop_toBottomOf="@+id/image_object"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            android:src="@drawable/gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_object"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:text="@string/tvPrice"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/btn_photo"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCat" />

        <EditText
            android:id="@+id/editPrice"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toEndOf="@+id/textPrice"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCat"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/statoObj"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_gallery" />

        <Spinner
            android:id="@+id/spinCondition"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:textAlignment="center"
            android:entries="@array/object_condition"
            app:layout_constraintStart_toEndOf="@+id/tvCondition"
            app:layout_constraintTop_toBottomOf="@+id/editPrice" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCondition" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="13dp"
            android:maxLength="400"
            android:background="@color/white"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sendObj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/sendObj"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDescription" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/mail"
            android:textSize="15sp"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendObj" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="84dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/phone"
            android:textSize="15sp"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toEndOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etDescription" />

        <ImageButton
            android:id="@+id/btn_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:minHeight="48dp"
            android:src="@drawable/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:hint="@string/address"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:ems="10"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toEndOf="@+id/btn_location"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="50dp"
            android:text="@string/createAdv"
            android:backgroundTint="@color/dark_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAddress"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>

