<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/image_object"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="68dp"
                android:background="@drawable/image_placeholder"
                android:backgroundTint="@color/dark_green"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tvModifyObject"
                android:textColor="@color/orange"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNameObj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nameObj"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/titleScreen"
                tools:layout_editor_absoluteX="202dp" />

            <EditText
                android:id="@+id/edNameObj"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:background="@color/white"
                android:ems="10"
                android:inputType="text"
                android:padding="5dp"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/image_object"
                tools:ignore="SpeakableTextPresentCheck"
                tools:layout_editor_absoluteY="96dp" />

            <TextView
                android:id="@+id/tvCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/image_object"
                app:layout_constraintTop_toBottomOf="@+id/edNameObj" />

            <Spinner
                android:id="@+id/spinnerCat"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/white"
                app:layout_constraintStart_toEndOf="@+id/image_object"
                app:layout_constraintTop_toBottomOf="@+id/tvCategories"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btn_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:minHeight="48dp"
                android:src="@drawable/photocamera"
                app:layout_constraintTop_toBottomOf="@+id/image_object"
                tools:ignore="SpeakableTextPresentCheck"
                tools:layout_editor_absoluteX="119dp" />

            <ImageButton
                android:id="@+id/btn_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:minHeight="48dp"
                android:src="@drawable/gallery"
                app:layout_constraintTop_toBottomOf="@+id/image_object"
                tools:ignore="SpeakableTextPresentCheck"
                tools:layout_editor_absoluteX="46dp" />

            <TextView
                android:id="@+id/textPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tvPrice"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCat"
                tools:layout_editor_absoluteX="202dp" />

            <EditText
                android:id="@+id/editPrice"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="7dp"
                android:background="@color/white"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                app:layout_constraintStart_toEndOf="@+id/btn_photo"
                app:layout_constraintTop_toBottomOf="@+id/textPrice"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tvCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/statoObj"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_gallery" />

            <Spinner
                android:id="@+id/spinCondition"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginStart="13dp"
                android:background="@color/white"
                android:entries="@array/object_condition"
                android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@+id/tvCondition"
                tools:layout_editor_absoluteY="338dp" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="44dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCondition" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="14dp"
                android:background="@color/white"
                android:ems="10"
                android:gravity="start|top"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                tools:ignore="SpeakableTextPresentCheck"
                tools:layout_editor_absoluteX="0dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sendObj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/sendObj"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDescription" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/editTextPhone"
                app:layout_constraintTop_toBottomOf="@+id/sendObj" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="170dp"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="227dp"
                tools:layout_editor_absoluteY="660dp" />

            <ImageButton
                android:id="@+id/btn_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="84dp"
                android:minHeight="48dp"
                android:src="@drawable/location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/etAddress"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
                tools:layout_editor_absoluteX="94dp" />

            <Button
                android:id="@+id/buttonModify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/dark_green"
                android:text="@string/tvModifyObject"
                app:layout_constraintTop_toBottomOf="@id/etAddress"
                tools:layout_editor_absoluteX="76dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>